# workman

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  WORKMAN_BUILD_PROGRESS.md  com.github.lumaseg.workman.json  pyproject.toml  release.sh
data/: com.github.lumaseg.workman.desktop  com.github.lumaseg.workman.metainfo.xml
extension/legacy/: extension.js  metadata.json
extension/modern/: extension.js  metadata.json
packaging/: README.md  build-packages.sh
packaging/scripts/: after-install.sh  after-remove.sh
scripts/: install-extension.sh
src/workman/: __init__.py  browsers.py  cli.py  session.py
tests/: test_browsers.py
